2008-03-19  Martin Leidig  <mleidig@schlund.de>

	Changed version to 0.12.3-pre (build):
	* build.xml
	* pom.xml

2008-03-09  schst  <schst@stubbles.net>

    Adde new <defaultflow flow="..."/> configuration option to specify a default
    flow per page request
    * src/de/schlund/pfixcore/workflow/context/PageFlowManager.java
    * src/de/schlund/pfixxml/config/PageRequestConfig.java
    * src/de/schlund/pfixxml/config/impl/PageRequestDefaultFlowRule.java
    * src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java
    * src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java
    * projects/core/schema/properties200401.xsd

2008-03-10  Martin Leidig  <mleidig@schlund.de>

	* skel/build-skel.xml: adjusted pattern to match  pfixcore-data archive
	to support both traditional and maven file naming style.

2008-03-10  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.12.2.

	* build.xml: changed version
	* pom.xml: changed version

2008-03-10  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/jaxws/generate/WebserviceTask.java: Keep
	sources generated by WSGen (because when only building .class files, it can
	happen that the IDE removes these files).
	* .classpath: add JAXB API to classpath.

2008-03-09  schst  <schst@stubbles.net>

	Added writeCDataSection(String cdata) method to the XMLWriter:
	* src/de/schlund/pfixcore/oxm/impl/DOMWriter.java
	* src/de/schlund/pfixcore/oxm/impl/XMLWriter.java
	
	Added new OXM serializer for CData section:
	* src/de/schlund/pfixcore/oxm/impl/serializers/CDataSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/annotation/CDataSerializer.java
	* tests/junit/de/schlund/pfixcore/oxm/CDataTestBean.java

	Removed element name parameter from XMLWriter.writeEndElement() as it
	should always close the last opened element:
	* src/de/schlund/pfixcore/oxm/impl/DOMWriter.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/BeanSerializer.java