@@ -1,5 +1,11 @@
 2008-03-19  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: if 
+	pageflow is requested with startwithflow and request has no page, use
+	last page of requested flow as current page
+
+2008-03-19  Martin Leidig  <mleidig@schlund.de>
+
 	Changed version to 0.12.3-pre (build):
 	* build.xml
 	* pom.xml
